--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <title>Forward Converter | Hope Channel Services</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!-- Optional theme -->
@@ -8,11 +9,9 @@
     <style>
         .upload-drop-zone {
             height: 200px;
-            border-width: 2px;
+            border: 2px dashed #ccc;
             margin-bottom: 20px;
             color: #ccc;
-            border-style: dashed;
-            border-color: #ccc;
             line-height: 200px;
             text-align: center
         }
